gitops/apps/hl-fresh/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hl-fresh
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: production
    spec:
      containers:
        - name: hl-fresh
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
