gitops/apps/hl-fresh/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hl-fresh
  labels:
    app.kubernetes.io/name: hl-fresh
    app.kubernetes.io/component: frontend
    app.kubernetes.io/environment: production
spec:
  ingressClassName: traefik
  rules:
    - host: fresh.honglam.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hl-fresh
                port:
                  name: http
